--- a/src/Server/Source/views/partials/header_employer_login.hbs
+++ b/src/Server/Source/views/partials/header_employer_login.hbs
@@ -1,30 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
-    <img id="logo_web_home_recruit" src="./style/image/logo_web.svg" alt="logoweb">
+    <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
     <a id="post_news_recruit" href="#">Đăng tin
-        <img src="./style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
+        <img src="/css/style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
     </a>
     <a id="chat_recruit" href="#">Kết nối
-        <img src="./style/image/ic_chat.svg" id="ic_chat_home_recruit" alt="ic_chat_home_recruit">
+        <img src="/css/style/image/ic_chat.svg" id="ic_chat_home_recruit" alt="ic_chat_home_recruit">
     </a>
     <div class="circle_icon_recruit">
-        <img src="./style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
+        <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_candidate"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
-            <img src="./style/image/avatar_candidate.svg" id="avatar_candidate" alt="avatar_candidate">
+            <img src="/css/style/image/avatar_candidate.svg" id="avatar_candidate" alt="avatar_candidate">
         </button>
         <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
             <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
-                <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
+                <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
             <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
-                <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate"
+                <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
             <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
-                <img src="./style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+                <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
             </a>
 
         </div>
