--- a/src/Server/Source/views/layouts/main_employer_not_login.hbs
+++ b/src/Server/Source/views/layouts/main_employer_not_login.hbs
@@ -20,7 +20,7 @@
         crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
-    <title>Jore</title>
+    <title>Jore Business</title>
 </head>
 
 <body>
