--- a/src/Server/Source/views/home_recruit_detail_news.html
+++ b/src/Server/Source/views/home_recruit_detail_news.html
@@ -1,137 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/css/css.css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/css/css.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="rectangle_home">
-        <nav class="navbar navbar-expand-lg navbar-light header">
-            <img id="logo_web_home_recruit" src="./style/image/logo_web.svg" alt="logoweb">
-            <a  id="post_news_recruit" href="#">Đăng tin
-                <img src="./style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
+      <nav class="navbar navbar-expand-lg navbar-light header">
+        <img id="logo_web_home_recruit" src="./style/image/logo_web.svg" alt="logoweb" />
+        <a id="post_news_recruit" href="#"
+          >Đăng tin
+          <img src="./style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit" />
+        </a>
+        <a id="chat_recruit" href="#"
+          >Kết nối
+          <img src="./style/image/ic_chat.svg" id="ic_chat_home_recruit" alt="ic_chat_home_recruit" />
+        </a>
+        <div class="circle_icon_recruit">
+          <img src="./style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate" />
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_candidate" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dương Minh Hiếu
+            <img src="./style/image/avatar_candidate.svg" id="avatar_candidate" alt="avatar_candidate" />
+          </button>
+          <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
+            <a class="dropdown-item" id="setting_account_candidate" href="#"
+              >Cài đặt tài khoản
+              <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate" alt="ic_setting_account_candidate" />
             </a>
-            <a  id="chat_recruit" href="#">Kết nối
-                <img src="./style/image/ic_chat.svg" id="ic_chat_home_recruit" alt="ic_chat_home_recruit">
+            <a class="dropdown-item" id="application_management_candidate" href="#"
+              >Quản lý hồ sơ ứng tuyển
+              <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate" alt="ic_application_management_candidate" />
             </a>
-            <div class="circle_icon_recruit">
-                <img src="./style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
+            <a class="dropdown-item" id="logout_candidate" href="#"
+              >Đăng xuất
+              <img src="./style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate" />
+            </a>
+          </div>
+        </div>
+      </nav>
+      <div class="rectangle_mid_detail_news_home_recruit">
+        <div class="side_left_home_recruit">
+          <a id="menu_news_home_recruit" href="#"
+            >Bảng tin
+            <img src="./style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit" />
+          </a>
+          <a id="menu_manage_recruit_home_recruit" href="#"
+            >Quản lý tin tuyển dụng
+            <img src="./style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit" alt="ic_manage_recruit_home_recruit" />
+          </a>
+          <a id="menu_manage_record_home_recruit" href="#"
+            >Quản lý hồ sơ ứng viên
+            <img src="./style/image/ic_management_record.svg" id="ic_manage_record_home_recruit" alt="ic_manage_record_home_recruit" />
+          </a>
+          <div id="line"></div>
+          <div id="text_version">©️2022 JORE. All rights reversed.</div>
+        </div>
+        <div class="rectangle_content_detail_news_home_recruit">
+          <div class="header_company_detail_job_recruit">
+            <img src="./style/image/logo_company.svg" alt="logo_company_recruit" class="logo_company_detail_job_recruit" />
+            <div class="name_job_detail_job">Front-End Web Developer</div>
+            <div class="name_company_detail_job">VNG Games</div>
+            <img src="./style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job" />
+            <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022</div>
+            <img src="./style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job" />
+            <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022</div>
+
+            <button type="button" class="edit_news_recruit">Chỉnh sửa</button>
+            <button type="button" class="delete_news_recruit">Xóa</button>
+            <button type="button" class="list_candidate_submit_recruit">Danh sách ứng viên</button>
+          </div>
+          <div id="rectangle_require_recruit">
+            <div id="text_detail_recruit_detail_job">Chi tiết tuyển dụng</div>
+            <div id="rectangle_general_information_detail_job">
+              <div id="text_general_information_detail_job">Thông tin chung</div>
+              <div class="circle_icon" id="circle_icon_salary_detail_job"></div>
+              <div id="text_salary_detail_job">Mức lương</div>
+              <div id="value_salary_detail_job">10-12 triệu</div>
+              <img src="./style/image/ic_cash.svg" alt="ic_cash" id="ic_salary_detail_job" />
+
+              <div class="circle_icon" id="circle_icon_persons_detail_job"></div>
+              <div id="text_number_person_detail_job">Số lượng</div>
+              <div id="value_number_person_detail_job">10 người</div>
+              <img src="./style/image/ic_persons.svg" alt="ic_person" id="ic_persons_detail_job" />
+
+              <div class="circle_icon" id="circle_icon_method_work_detail_job"></div>
+              <div id="text_method_work_detail_job">Hình thức làm việc</div>
+              <div id="value_method_work_detail_job">Fulltime</div>
+              <img src="./style/image/ic_bag.svg" alt="ic_method_work" id="ic_method_work_detail_job" />
+              <div class="circle_icon" id="circle_icon_rank_detail_job"></div>
+              <div id="text_rank_detail_job">Cấp bậc</div>
+              <div id="value_rank_detail_job">Nhân viên</div>
+              <img src="./style/image/ic_rank.svg" alt="ic_rank" id="ic_rank_detail_job" />
+              <div class="circle_icon" id="circle_icon_gender_detail_job"></div>
+              <div id="text_gender_detail_job">Giới tính</div>
+              <div id="value_gender_detail_job">Không yêu cầu</div>
+              <img src="./style/image/ic_gender.svg" alt="ic_gender" id="ic_gender_detail_job" />
+              <div class="circle_icon" id="circle_icon_experience_detail_job"></div>
+              <div id="text_experience_detail_job">Kinh nghiệm</div>
+              <div id="value_experience_detail_job">1 năm</div>
+              <img src="./style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job" />
+
+              <div id="text_adress_work_detail_job">Địa điểm làm việc</div>
+              <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố Hồ Chí Minh</div>
             </div>
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_candidate"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
-                    <img src="./style/image/avatar_candidate.svg" id="avatar_candidate" alt="avatar_candidate">
-                </button>
-                <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
-                    <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
-                        <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate" alt="ic_setting_account_candidate">
-                    </a>
-                    <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
-                        <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate" alt="ic_application_management_candidate">
-                    </a>
-                    <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
-                        <img src="./style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-                    </a>
-               
-                </div>
+            <div id="rectangle_share_recruit_detail_job">
+              <div id="text_share_recuit_detail_job">Chia sẻ tin tuyển dụng</div>
+              <div id="text_copy_link_detail_job">Sao chép đường dẫn</div>
+              <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled name="link_detail_job" id="link_detail_job" />
+
+              <div id="circle_copy_link_detail_job">
+                <img src="./style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job" />
+              </div>
             </div>
-        </nav>
-        <div class="rectangle_mid_detail_news_home_recruit">
-           <div class="side_left_home_recruit">
-            <a  id="menu_news_home_recruit" href="#">Bảng tin
-                <img src="./style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
-            </a>
-            <a  id="menu_manage_recruit_home_recruit" href="#">Quản lý tin tuyển dụng
-                <img src="./style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit" alt="ic_manage_recruit_home_recruit">
-            </a>
-            <a  id="menu_manage_record_home_recruit" href="#">Quản lý hồ sơ ứng viên
-                <img src="./style/image/ic_management_record.svg" id="ic_manage_record_home_recruit" alt="ic_manage_record_home_recruit">
-            </a>
-            <div id="line"></div>
-            <div id="text_version">©️2022 JORE. All rights reversed.</div>
-           </div>
-           <div class="rectangle_content_detail_news_home_recruit">
-            <div class="header_company_detail_job_recruit">
-                <img src="./style/image/logo_company.svg" alt="logo_company_recruit" class="logo_company_detail_job_recruit">
-                <div class="name_job_detail_job">Front-End Web Developer</div>
-                <div class="name_company_detail_job">VNG Games</div>
-                <img src="./style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job">
-                <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022 </div>
-                <img src="./style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job">
-                <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022 </div>
-                
-                <button type="button" class="edit_news_recruit">Chỉnh sửa</button>
-                <button type="button" class="delete_news_recruit">Xóa</button>
-                <button type="button" class="list_candidate_submit_recruit">Danh sách ứng viên</button>
 
-            </div>
-            <div id="rectangle_require_recruit">
-                <div id="text_detail_recruit_detail_job">Chi tiết tuyển dụng</div>
-                <div id="rectangle_general_information_detail_job">
-                    <div id="text_general_information_detail_job">Thông tin chung</div>
-                    <div class="circle_icon" id="circle_icon_salary_detail_job"></div>
-                    <div id="text_salary_detail_job">Mức lương</div>
-                    <div id="value_salary_detail_job">10-12 triệu</div>
-                    <img src="./style/image/ic_cash.svg" alt="ic_cash" id="ic_salary_detail_job">
-
-                    <div class="circle_icon" id="circle_icon_persons_detail_job"></div>
-                    <div id="text_number_person_detail_job">Số lượng</div>
-                    <div id="value_number_person_detail_job">10 người</div>
-                    <img src="./style/image/ic_persons.svg" alt="ic_person" id="ic_persons_detail_job">
-
-                    <div class="circle_icon" id="circle_icon_method_work_detail_job"></div>
-                    <div id="text_method_work_detail_job">Hình thức làm việc</div>
-                    <div id="value_method_work_detail_job">Fulltime</div>
-                    <img src="./style/image/ic_bag.svg" alt="ic_method_work" id="ic_method_work_detail_job">
-                    <div class="circle_icon" id="circle_icon_rank_detail_job"></div>
-                    <div id="text_rank_detail_job">Cấp bậc</div>
-                    <div id="value_rank_detail_job">Nhân viên</div>
-                    <img src="./style/image/ic_rank.svg" alt="ic_rank" id="ic_rank_detail_job">
-                    <div class="circle_icon" id="circle_icon_gender_detail_job"></div>
-                    <div id="text_gender_detail_job">Giới tính</div>
-                    <div id="value_gender_detail_job">Không yêu cầu</div>
-                    <img src="./style/image/ic_gender.svg" alt="ic_gender" id="ic_gender_detail_job">
-                    <div class="circle_icon" id="circle_icon_experience_detail_job"></div>
-                    <div id="text_experience_detail_job">Kinh nghiệm</div>
-                    <div id="value_experience_detail_job">1 năm</div>
-                    <img src="./style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job">
-
-                    <div id="text_adress_work_detail_job">Địa điểm làm việc</div>
-                    <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố Hồ Chí Minh</div>
-                </div>
-                <div id="rectangle_share_recruit_detail_job">
-                    <div id="text_share_recuit_detail_job">Chia sẻ tin tuyển dụng</div>
-                    <div id="text_copy_link_detail_job">Sao chép đường dẫn</div>
-                    <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled name="link_detail_job" id="link_detail_job">
-                    
-                    <div id="circle_copy_link_detail_job">
-                        <img src="./style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job">
-                    </div>
-                </div>
-               
-
-                <div id="text_describe_job_detail_job">Mô tả công việc</div>
-                <pre id="value_describe_job_detail_job">
+            <div id="text_describe_job_detail_job">Mô tả công việc</div>
+            <pre id="value_describe_job_detail_job">
                     - Lập trình phần frontend bằng JavaScript/TypeScript sử dụng thư viện VueJS, GraphQL 
                     - Thiết kế, sửa đổi giao diện người dùng theo yêu cầu khách hàng
                     - Sửa lỗi, viết unit test, cải tiến code nếu cần
@@ -139,18 +136,20 @@
                     - Thực hiện các nhiệm vụ do trưởng nhóm giao
                     - Địa điểm làm việc: Cầu Giấy, Hà Nội
                     - Hình thức làm việc: Fulltime T2-T7 hàng tuần
-                </pre>
-                <div id="text_require_candidate_detail_job">Yêu cầu ứng viên</div>
-                <pre id="value_require_candidate_detail_job">
+                </pre
+            >
+            <div id="text_require_candidate_detail_job">Yêu cầu ứng viên</div>
+            <pre id="value_require_candidate_detail_job">
                     - Thành thạo HTML/CSS, Javascript (ES6, ES7)
                     - Có kinh nghiệm làm việc với Typescript
                     - Có kinh nghiệm làm việc thực tế một trong các framework của Javascript như Vuejs, Reactjs, Angular (ưu tiên Vuejs)
                     - Đã làm việc với Restful, Graphql
                     - Sử dụng thành thạo Git
                     - Tối thiểu 6 tháng kinh nghiệm
-                </pre>
-                <div id="text_benefit_detail_job">Quyền lợi</div>
-                <pre id="value_benefit_detail_job">
+                </pre
+            >
+            <div id="text_benefit_detail_job">Quyền lợi</div>
+            <pre id="value_benefit_detail_job">
                     - Mức lương: $500 - $1,000 Gross
                     - Đóng BHXH, BHYT, BHTN, thưởng tháng 13, thưởng Project,...
                     - Môi trường năng động, chuyên nghiệp có nhiều cơ hội thăng tiến
@@ -158,21 +157,16 @@
                     - Được đào tạo về kiến thức, kỹ năng phục vụ công việc
                     - Cơ hội học hỏi những công nghệ khác
                     - Được tham gia các hoạt động, chương trình, dự án, sự kiện của công ty 
-                </pre>
+                </pre
+            >
+          </div>
+        </div>
+      </div>
 
-            </div>
-            
-        </div>
-        </div>
-       
-        <div class="footer">
-            <img id="logo_web_footer" src="./style/image/logo_web.svg" alt="logoweb">
-            <p id="text_info_footer">Chúng tôi là JORE hệ thống tìm kiếm việc làm uy tính tại Việt Nam</p>
-        </div>
-
+      <div class="footer">
+        <img id="logo_web_footer" src="./style/image/logo_web.svg" alt="logoweb" />
+        <p id="text_info_footer">Chúng tôi là JORE hệ thống tìm kiếm việc làm uy tính tại Việt Nam</p>
+      </div>
     </div>
-
-
-</body>
-
+  </body>
 </html>
