all render of candidate

--- a/src/Server/Source/public/css/style/css/css.css
+++ b/src/Server/Source/public/css/style/css/css.css
@@ -1,6 +1,13 @@
 select {
     appearance: none;
 }
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 
 .header {
 
@@ -140,8 +147,6 @@ select {
     position: relative;
     width: 100%;
     height: 277px;
-    left: 0px;
-    top: 0px;
 
     background: #00B4D8;
 }
@@ -2748,7 +2753,6 @@ select {
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
-
     color: #3D3D3D;
 
 }
