add some connects in employer pages

--- a/src/Server/Source/views/content_employer/reset_pw.hbs
+++ b/src/Server/Source/views/content_employer/reset_pw.hbs
@@ -16,9 +16,9 @@
             <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_2" alt="eye_slash_new_password_2">
 
             <button type="submit" id="submit_new_password">Thay đổi mật khẩu</button>
+        </form>
     </div>
     <div id="rectangle_image_reset_password">
         <img src="/css/style/image/side_reset_password.svg" id="side_reset_password" alt="side_reset_password">
-
     </div>
 </div>
