--- a/src/Server/Source/views/partials/header_employer_login.hbs
+++ b/src/Server/Source/views/partials/header_employer_login.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
     <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
-    <a id="post_news_recruit" href="#">Đăng tin
+    <a id="post_news_recruit" href="/employer/edit_recruitment">Đăng tin
         <img src="/css/style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
     </a>
     <a id="chat_recruit" href="#">Kết nối
@@ -19,14 +19,16 @@
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
-            <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
+            <a class="dropdown-item" id="application_management_candidate" href="/employer/manage_recruitments">Quản lý
+                hồ sơ ứng tuyển
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-            <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
-                <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-            </a>
-
+            <form action="" class="dropdown-item" id="logout_candidate">
+                <button type="submit">Đăng xuất
+                    <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+                </button>
+            </form>
         </div>
     </div>
 </nav>
