--- a/src/Server/Source/views/candidate/content_forget_password.hbs
+++ b/src/Server/Source/views/candidate/content_forget_password.hbs
@@ -7,7 +7,7 @@
             <input type="email" name="email_signin" id="email_forget_password" required
                 placeholder="Nhập email của bạn">
             <img src="/css/style/image/logo_email.svg" id="logo_email_forget_password" alt="logo_email_forget_password">
-            <button type="submit" id="submit_forget_password">Gửi</button>
+            <button type="submit" id="submit_forget_password" href="/candidate/authentication">Gửi</button>
         </form>
 
     </div>
