--- a/src/Server/Source/views/candidate/content_home.hbs
+++ b/src/Server/Source/views/candidate/content_home.hbs
@@ -4,7 +4,7 @@
                 <div class="d-flex flex-wrap card_company_searched_candidate">
                     <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
@@ -15,9 +15,9 @@
                         <div class="time_card_company">Cập nhật 3 tiếng trước</div>
 
                     </div>
-                    <div class="item_company_candidate p-2 m-2">
+                      <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
@@ -28,9 +28,9 @@
                         <div class="time_card_company">Cập nhật 3 tiếng trước</div>
 
                     </div>
-                    <div class="item_company_candidate p-2 m-2">
+                       <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
@@ -41,9 +41,9 @@
                         <div class="time_card_company">Cập nhật 3 tiếng trước</div>
 
                     </div>
-                    <div class="item_company_candidate p-2 m-2">
+                       <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
@@ -54,9 +54,9 @@
                         <div class="time_card_company">Cập nhật 3 tiếng trước</div>
 
                     </div>
-                    <div class="item_company_candidate p-2 m-2">
+                       <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
@@ -67,9 +67,9 @@
                         <div class="time_card_company">Cập nhật 3 tiếng trước</div>
 
                     </div>
-                    <div class="item_company_candidate p-2 m-2">
+                       <div class="item_company_candidate p-2 m-2">
                         <img src="/css/style/image/logo_web.svg" alt="logo" class="logo_company_home_candidate">
-                        <div class="title_recuit_company_home_candidate">Front-End Web Developer</div>
+                        <a class="title_recuit_company_home_candidate" href="/candidate/detail_job">Front-End Web Developer</a>
                         <div class="name_company_home_candidate">VNG Games</div>
                         <div class="wage_copany_home_candidate">12-20 triệu</div>
                         <div class="address_company_home_candidate">Hà Nội, Trường Sa</div>
