--- a/src/Server/Source/views/candidate/content_login.hbs
+++ b/src/Server/Source/views/candidate/content_login.hbs
@@ -30,9 +30,9 @@
         <button type="submit" id="submit_login_google"></button>
         <img src="/css/style/image/ic_google.svg" id="ic_google" alt="ic_google">
         <div id="text_No_Account">Bạn chưa có tài khoản?
-            <a id="signin_now" href="">Đăng ký ngay</a>
+            <a id="signin_now" href="/candidate/signup">Đăng ký ngay</a>
         </div>
-        <a href="" id="forget_password">Quên mật khẩu</a>
+        <a href="/candidate/forget_password" id="forget_password">Quên mật khẩu</a>
     </div>
     <div id="rectangle_image_login">
         <img src="/css/style/image/side_login.svg" id="side_login" alt="login">
