--- a/src/Server/Source/views/content_employer/account_authentication.hbs
+++ b/src/Server/Source/views/content_employer/account_authentication.hbs
@@ -4,7 +4,7 @@
         <div id="text_please_fill_code_confirm">Vui lòng kiểm tra email của bạn để lấy mã xác nhận </div>
         <form action="">
             <div id="label_code_confirm">Mã xác nhận</div>
-            <input type="text" name="code_confirm_account" id="code_confirm_account" required
+            <input type="text" name="code_confirm_account_employer" id="code_confirm_account" required
                 placeholder="Nhập mã xác nhận">
             <button type="submit" id="submit_account_authe">Xác nhận</button>
         </form>
