--- a/src/Server/Source/views/partials/header_employer_login.hbs
+++ b/src/Server/Source/views/partials/header_employer_login.hbs
@@ -10,12 +10,12 @@
         <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_candidate"
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
-            <img src="/css/style/image/avatar_candidate.svg" id="avatar_candidate" alt="avatar_candidate">
+            <img src="/css/style/image/avatar_candidate.svg" id="avatar_recruit" alt="avatar_recruit">
         </button>
-        <div class="dropdown-menu" id="dropdown_menu_candidate" aria-labelledby="menu_account_candidate">
-            <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
+        <div class="dropdown-menu" id="dropdown_menu_recruit" aria-labelledby="menu_account_recruit">
+            <a class="dropdown-item" id="setting_account_recruit" href="#">Cài đặt tài khoản
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
@@ -24,11 +24,10 @@
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-            <form action="" class="dropdown-item" id="logout_candidate">
-                <button type="submit">Đăng xuất
-                    <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-                </button>
-            </form>
+               <a class="dropdown-item" id="logout_recruit" href="#">Đăng xuất
+                        <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+              </a>
+
         </div>
     </div>
 </nav>
