--- a/src/Server/Source/views/partials/menu.hbs
+++ b/src/Server/Source/views/partials/menu.hbs
@@ -1,8 +1,8 @@
 <div class="side_left_home_recruit">
-    <a id="menu_news_home_recruit" href="#">Bảng tin
+    <a id="menu_news_home_recruit" href="/employer">Bảng tin
         <img src="/css/style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
     </a>
-    <a id="menu_manage_recruit_home_recruit" href="#">Quản lý tin tuyển dụng
+    <a id="menu_manage_recruit_home_recruit" href="/employer/manage_recruitments">Quản lý tin tuyển dụng
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
