--- a/src/Server/Source/views/candidate/content_manage_record.hbs
+++ b/src/Server/Source/views/candidate/content_manage_record.hbs
@@ -2,10 +2,10 @@
             <div class="rectangle_content_application_management_candidate">
                 <div id="text_application_management_candidate">Quản lý hồ sơ ứng tuyển</div>
                 <div id="side_left_application_management_candidate">
-                    <button type="button" id="btn_all_application_management_candidate">Tất cả</button>
-                    <button type="button" id="btn_pending_application_management_candidate">Đang chờ duyệt</button>
-                    <button type="button" id="btn_selected_application_management_candidate">Đã được chọn</button>
-                    <button type="button" id="btn_not_suitable_application_management_candidate">Không phù hợp</button>
+                    <a type="button" id="btn_all_application_management_candidate" href="manage_record/all">Tất cả</a>
+                    <a type="button" id="btn_pending_application_management_candidate" href="manage_record/waiting">Đang chờ duyệt</a>
+                    <a type="button" id="btn_selected_application_management_candidate" href="manage_record/selected" >Đã được chọn</a>
+                    <a type="button" id="btn_not_suitable_application_management_candidate" href="manage_record/not_suitable">Không phù hợp</a>
 
                 </div>
                 <div id="side_main_application_management_candidate">
