--- a/src/Server/Source/views/content_employer/forgot_pw.hbs
+++ b/src/Server/Source/views/content_employer/forgot_pw.hbs
@@ -4,7 +4,7 @@
         <div id="text_please_fill">Vui lòng nhập đia chỉ email để khôi phục tài khoản của bạn</div>
         <form action="">
             <div id="label_email_forget_password">Email</div>
-            <input type="email" name="email_signin" id="email_forget_password" required
+            <input type="email" name="email_signin_employer" id="email_forget_password" required
                 placeholder="Nhập email của bạn">
             <img src="/css/style/image/logo_email.svg" id="logo_email_forget_password" alt="logo_email_forget_password">
             <button type="submit" id="submit_forget_password">Gửi</button>
