--- a/src/Server/Source/views/partials/header_candidate_login.hbs
+++ b/src/Server/Source/views/partials/header_candidate_login.hbs
@@ -13,8 +13,11 @@
                     <a class="dropdown-item" id="setting_account_candidate" href="#">Cài đặt tài khoản
                         <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate" alt="ic_setting_account_candidate">
                     </a>
-                    <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
+                    <a class="dropdown-item" id="application_management_candidate" href="/candidate/manage_record">Quản lý hồ sơ ứng tuyển
                         <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate" alt="ic_application_management_candidate">
+                    </a>
+                      <a class="dropdown-item" id="change_password_candidate" href="/candidate/reset_password">Thay đổi mật khẩu
+                        <img src="/css/style/image/logo_password.svg" id="ic_reset_password" alt="ic_reset_password">
                     </a>
                     <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
                         <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
