--- a/src/server_candidate/Source/public/css/style/css/css.css
+++ b/src/server_candidate/Source/public/css/style/css/css.css
@@ -4696,6 +4696,779 @@ top: 0px;
 
 background: #F2F2F2;
 }
+/*Chỉnh sửa tin tuyển dụng*/
 #text_edit_news{
-    
+    position: absolute;
+height: 63px;
+left: 103px;
+top: 44px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 63px;
+/* identical to box height */
+
+text-align: center;
+
+color: #00B4D8;
 }
+#please_enter_edit{
+    position: absolute;
+width: 480px;
+height: 36px;
+left: 55px;
+top: 100px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 36px;
+/* identical to box height */
+
+text-align: center;
+
+color: #939598;
+}
+#label_title{
+    position: absolute;
+height: 27px;
+left: 110px;
+top: 187px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#title_edit_news{
+    box-sizing: border-box;
+
+position: absolute;
+width: 1194px;
+height: 56px;
+left: 108px;
+top: 218px;
+
+    background: #FFFFFF;
+    border: 1px solid #939598;
+    border-radius: 10px;
+
+
+    padding-left: 30px;
+    line-height: 56px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+}
+#text_info_general{
+    position: absolute;
+width: 201px;
+height: 36px;
+left: 108px;
+top: 310px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+#salary_edit_news{
+    
+position: absolute;
+height: 27px;
+left: 109px;
+top: 375px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#min_salary_edit_news{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 169px;
+    height: 56px;
+    left: 108px;
+    top: 410px;
+    
+        background: #FFFFFF;
+        border: 1px solid #939598;
+        border-radius: 10px;
+    
+    
+        padding-left: 30px;
+        line-height: 56px;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+
+}
+#line_edit_news{
+    position: absolute;
+    width: 10px;
+    height: 0px;
+    left: 282px;
+    top: 438px;
+    
+    border: 1px solid #000000;
+}
+#max_salary_edit_news{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 169px;
+    height: 56px;
+    left: 297px;
+    top: 410px;
+    
+        background: #FFFFFF;
+        border: 1px solid #939598;
+        border-radius: 10px;
+    
+    
+        padding-left: 30px;
+        line-height: 56px;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+
+}
+#text_quantity_edit_news{
+    position: absolute;
+height: 27px;
+left: 594px;
+top: 375px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#quantity_edit_news{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 169px;
+    height: 56px;
+    left: 594px;
+    top: 410px;
+    
+        background: #FFFFFF;
+        border: 1px solid #939598;
+        border-radius: 10px;
+    
+    
+        padding-left: 30px;
+        line-height: 56px;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+}
+#text_method_word_edit_news{
+    position: absolute;
+    height: 27px;
+    left: 887px;
+    top: 375px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    /* identical to box height */
+    
+    
+    color: #3D3D3D;
+}
+#method_work_edit_news {
+    position: absolute;
+    width: 256px;
+    height: 56px;
+    padding-left: 20px;
+    left: 887px;
+    top: 410px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 56px;
+
+}
+#text_sex_edit_news{
+    position: absolute;
+height: 27px;
+left: 109px;
+top: 490px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#sex_edit_news{
+    position: absolute;
+    width: 169px;
+    height: 56px;
+    padding-left: 20px;
+    left: 108px;
+    top: 520px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 56px;
+}
+#text_experience_edit_news{
+    position: absolute;
+height: 27px;
+left: 594px;
+top: 490px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#experience_edit_news{
+    position: absolute;
+    width: 169px;
+    height: 56px;
+    padding-left: 20px;
+    left: 594px;
+    top: 520px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 56px;
+}
+#text_deadline_submit_record_edit_news{
+    position: absolute;
+height: 27px;
+left: 887px;
+top: 490px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#deadline_submit_record_edit_news{
+    box-sizing: border-box;
+
+position: absolute;
+width: 242px;
+height: 56px;
+left: 887px;
+top: 520px;
+
+    background: #FFFFFF;
+    border: 1px solid #939598;
+    border-radius: 10px;
+
+
+    padding-left: 30px;
+    line-height: 56px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+}
+#text_work_locatio_edit_news{
+    position: absolute;
+height: 36px;
+left: 108px;
+top: 670px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+#word_location_edit_news{
+    box-sizing: border-box;
+
+position: absolute;
+width: 1194px;
+height: 56px;
+left: 108px;
+top: 715px;
+
+    background: #FFFFFF;
+    border: 1px solid #939598;
+    border-radius: 10px;
+
+
+    padding-left: 30px;
+    line-height: 56px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+}
+#text_job_describe{
+    position: absolute;
+height: 36px;
+left: 108px;
+top: 800px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+
+
+#job_describe_edit_news {
+    position: absolute;
+    width: 1194px;
+    height: 450px;
+    left: 108px;
+    top: 860px;
+    border: 0.5px solid black;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    overflow-wrap: break-word;
+    /* identical to box height */
+
+
+    color: #494848;
+}
+
+#text_require_candidate_edit_news{
+    position: absolute;
+height: 36px;
+left: 108px;
+top: 1340px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+
+
+#require_candidate_edit_news {
+    position: absolute;
+    width: 1194px;
+    height: 450px;
+    left: 108px;
+    top: 1400px;
+    border: 0.5px solid black;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    overflow-wrap: break-word;
+    /* identical to box height */
+
+
+    color: #494848;
+}
+
+#text_benefit_edit_news{
+    position: absolute;
+height: 36px;
+left: 108px;
+top: 1880px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+
+
+#benefit_edit_news {
+    position: absolute;
+    width: 1194px;
+    height: 450px;
+    left: 108px;
+    top: 1940px;
+    border: 0.5px solid black;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    overflow-wrap: break-word;
+    /* identical to box height */
+
+
+    color: #494848;
+}
+#cancle_edit_news{
+    position: absolute;
+width: 150px;
+height: 60px;
+left: 960px;
+top: 2420px;
+
+background: #FFFFFF;
+border: 2px solid #00B4D8;
+border-radius: 10px;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+text-align: center;
+font-size: 20px;
+line-height: 60px;
+text-decoration: none;
+color: #000000;
+}
+#submit_edit_news{
+    position: absolute;
+width: 150px;
+height: 60px;
+left: 1140px;
+top: 2420px;
+
+background: #00B4D8;
+border-radius: 10px;
+border: none;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+text-align: center;
+font-size: 20px;
+line-height: 60px;
+color: white;
+}
+
+
+
+
+/*xem thông tin ứng viên*/
+#content_profile_candidate_recruit{
+    position: absolute;
+width: 1500px;
+height: 987px;
+left: 370px;
+top: 20px;
+
+background: #F2F2F2;
+}
+#head_profie_candidate_recruit{
+    position: relative;
+    width: 1500px;
+    height: 250px;
+    
+    background: #FFFFFF;
+}
+#avatar_profile_candidate_recruit{
+    position: absolute;
+width: 180px;
+height: 180px;
+left: 75px;
+top: 30px;
+border: 1px solid #D7E4E8;
+border-radius: 90px;
+}
+#name_candidate_recruit{
+    position: absolute;
+width: 241px;
+height: 45px;
+left: 330px;
+top: 40px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 45px;
+/* identical to box height */
+
+
+color: #0077B6;
+
+}
+#status_profile_candidate_recruit{
+    position: absolute;
+height: 27px;
+left: 330px;
+top: 97px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 27px;
+/* identical to box height */
+
+
+color: #000000;
+}
+#date_submit_profile_candidate_recruit{
+    position: absolute;
+    height: 27px;
+    left: 330px;
+    top: 140px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    /* identical to box height */
+    
+    
+    color: #000000;
+}
+#btn_accept_candidate{
+    position: absolute;
+width: 200px;
+height: 60px;
+left: 1066px;
+top: 30px;
+
+background: #0077B6;
+border-radius: 10px;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 60px;
+text-align: center;
+/* identical to box height */
+text-decoration: none;
+
+
+color: #FFFFFF;
+}
+#btn_reject_candidate{
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    left: 1066px;
+    top: 120px;
+    
+    background: white;
+    border: 1px solid #0077B6;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 60px;
+    text-align: center;
+    /* identical to box height */
+    text-decoration: none;
+    
+    color: #0077B6;
+}
+#info_profile_candidate_recruit{
+    position: relative;
+    width: 1500px;
+    height: 600px;
+    top:10px;
+    background: #FFFFFF;
+}
+#text_info_personal{
+    position: absolute;
+height: 36px;
+left: 70px;
+top: 50px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 36px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+
+}
+#date_of_birth_profile_candidate_recruit{
+    position: absolute;
+height: 30px;
+left: 70px;
+top: 100px;
+
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+/* identical to box height */
+
+
+color: #3D3D3D;
+}
+#sex_profile_candidate_recruit{
+    position: absolute;
+    height: 30px;
+    left: 620px;
+    top: 100px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    /* identical to box height */
+    
+    
+    color: #3D3D3D;
+}
+#phone_profile_candidate_recruit{
+    position: absolute;
+    height: 30px;
+    left: 620px;
+    top: 150px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    /* identical to box height */
+    
+    
+    color: #3D3D3D;
+}
+#email_profile_candidate_recruit{
+    position: absolute;
+    height: 30px;
+    left: 70px;
+    top: 150px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    /* identical to box height */
+    
+    
+    color: #3D3D3D;
+}
+#address_profile_candidate_recruit{
+    position: absolute;
+    width: 530px;
+    height: 60px;
+    left:900px;
+    top: 100px;
+    
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    /* identical to box height */
+    
+    
+    color: #3D3D3D;
+}
+#ic_CV{
+    position: absolute;
+    left:600px;
+    top: 250px;
+}
+#CV_profile_candidate{
+        position: absolute;
+    width: 80px;
+    height: 40px;
+    left: 650px;
+    top: 245px;
+    
+    background: #0077B6;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 40px;
+    text-align: center;
+    /* identical to box height */
+    text-decoration: none;
+    
+    
+    color: #FFFFFF;
+    }
