--- a/src/server_employer/Source/views/view_profile_candidate.html
+++ b/src/server_employer/Source/views/view_profile_candidate.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </nav>
-        <div class="rectangle_mid_edit_home_recruit">
+        <div class="rectangle_mid_news_home_recruit">
             <div class="side_left_home_recruit">
                 <a id="menu_news_home_recruit" href="#">Bảng tin
                     <img src="./style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
@@ -75,61 +75,28 @@
                 <div id="line"></div>
                 <div id="text_version">©️2022 JORE. All rights reversed.</div>
             </div>
-            <div id="content_edit_news_home_recruit">
-                <div id="text_edit_news">Chỉnh sửa tin tuyển dụng</div>
-                <div id="please_enter_edit">Vui lòng nhập thông tin cần chỉnh sửa</div>
-                <form action="">
-                    <div id="label_title">Tiêu đề</div>
-                    <input type="text" name="title_edit_news" id="title_edit_news"  required placeholder="Nhập tiêu đề tin tuyển dụng">
-                    <div id="text_info_general">Thông tin chung</div>
-                    <div id="salary_edit_news">Mức lương</div>
-                    <input type="number" name="min_salary_edit_news" id="min_salary_edit_news"  required placeholder="Tối thiểu">
-                    <div id="line_edit_news"></div>
-                    <input type="number" name="max_salary_edit_news" id="max_salary_edit_news"  required placeholder="Tối đa">
-                    <div id="text_quantity_edit_news">Số lượng</div>
-                    <input type="number" name="quantity_edit_news" id="quantity_edit_news"  required placeholder="Số lượng">
-                    <div id="text_method_word_edit_news">Hình thức làm việc</div>
+            <div id="content_profile_candidate_recruit">
+                <div id="head_profie_candidate_recruit">
+                    <img src="./style/image/avatar_candidate.svg" id="avatar_profile_candidate_recruit"
+                    alt="avatar_profile_candidate_recruit">
+                    <div id="name_candidate_recruit">Hồ Duy Bảo</div>
+                    <div id="status_profile_candidate_recruit">Trạng thái: Chờ duyệt</div>
+                    <div id="date_submit_profile_candidate_recruit">Ngày nộp hồ sơ: 22/01/2022</div>
+                    <a id="btn_accept_candidate" href="#">Chấp nhận</a>
+                    <a id="btn_reject_candidate" href="#">Từ chối</a>
+                </div>
+                <div id="info_profile_candidate_recruit">
+                    <div id="text_info_personal">Thông tin cá nhân</div>
+                    <div id="date_of_birth_profile_candidate_recruit">Ngày sinh: 27/08/2002</div>
+                    <div id="sex_profile_candidate_recruit">Giới tính: Nam</div>
+                    <div id="phone_profile_candidate_recruit">SĐT: 0823304385</div>
+                    <div id="email_profile_candidate_recruit">Email: 20120420@student.hcmus.edu.vn</div>
+                    <div id="address_profile_candidate_recruit">Địa chỉ: KTX khu B, Đông Hòa, Dĩ An, Bình Dương</div>
+                    <img src="./style/image/ic_upload.svg" id="ic_CV" alt="ic_CV">
+                    <a  id="CV_profile_candidate" href="b.docx">CV</a>
 
-                    <select name="method_work_edit_news" id="method_work_edit_news" required="">
-                        <option disabled selected value> Hình thức làm việc </option>
-                        <option value="" class="op_select_method_work">Full Time</option>
-                        <option value="" class="op_select_method_work">Part Time</option>
-                        <option value="" class="op_select_method_work">Remote</option>
-                    </select>
-                    <input id="method_work_edit_news" name="method_work_edit_news" type="hidden" value="">
-                    <div id="text_sex_edit_news">Giới tính</div>
-
-                    <select name="sex_edit_news" id="sex_edit_news" required="">
-                        <option disabled selected value>Giới tính</option>
-                        <option value="" class="op_select_method_work">Nam</option>
-                        <option value="" class="op_select_method_work">Nữ</option>
-                    </select>
-                    <input id="sex_edit_news" name="sex_edit_news" type="hidden" value="">
-
-                    <div id="text_experience_edit_news">Kinh nghiệm</div>
-
-                    <select name="experience_edit_news" id="experience_edit_news" required="">
-                        <option disabled selected value>Kinh nghiệm</option>
-                        <option value="" class="op_select_method_work">Chưa có</option>
-                        <option value="" class="op_select_method_work">1 năm</option>
-                        <option value="" class="op_select_method_work">2 năm</option>
-                        <option value="" class="op_select_method_work">3 năm</option>
-                        <option value="" class="op_select_method_work">Hơn 3 năm</option>
-                    </select>
-                    <input id="experience_edit_news" name="experience_edit_news" type="hidden" value="">
-                    <div id="text_deadline_submit_record_edit_news">Hạn nộp hồ sơ</div>
-                    <input type="date" name="deadline_submit_record_edit_news" id="deadline_submit_record_edit_news"  required placeholder="Hạn nộp hồ sơ">
-                    <div id="text_work_locatio_edit_news">Địa điểm làm việc</div>
-                    <input type="text" name="word_location_edit_news" id="word_location_edit_news"  required placeholder="Nhập địa điểm làm việc">
-                    <div id="text_job_describe">Mô tả công việc</div>
-                    <textarea type="text" name="job_describe_edit_news" id="job_describe_edit_news"  required></textarea>
-                    <div id="text_require_candidate_edit_news">Yêu cầu ứng viên</div>
-                    <textarea type="text" name="require_candidate_edit_news" id="require_candidate_edit_news"  required></textarea>
-                    <div id="text_benefit_edit_news">Quyền lợi</div>
-                    <textarea type="text" name="benefit_edit_news" id="benefit_edit_news"  required></textarea>
-                    <button type="submit" id="submit_edit_news">Cập nhật</button>
-                </form>
-                <a id="cancle_edit_news" href="#">Hủy bỏ</a>
+                       
+                </div>
 
             </div>
         </div>
