--- a/src/server_candidate/Source/views/candidate/content_signup.hbs
+++ b/src/server_candidate/Source/views/candidate/content_signup.hbs
@@ -45,7 +45,7 @@
         </form>
 
         <div id="text_have_Account">Bạn đã có tài khoản?
-            <a id="login_now" href="">Đăng nhập ngay</a>
+            <a id="login_now" href="/auth/login">Đăng nhập ngay</a>
         </div>
     </div>
 </div>
