--- a/src/server_candidate/Source/views/partials/header_candidate_login.hbs
+++ b/src/server_candidate/Source/views/partials/header_candidate_login.hbs
@@ -19,12 +19,15 @@
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-            <a class="dropdown-item" id="change_password_candidate" href="/candidate/reset_password">Thay đổi mật khẩu
+            <a class="dropdown-item" id="change_password_candidate" href="/auth/reset_password">Thay đổi mật khẩu
                 <img src="/css/style/image/logo_password.svg" id="ic_reset_password" alt="ic_reset_password">
             </a>
-            <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
-                <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-            </a>
+            <form method="post" action="/auth/logout">
+                <button class="dropdown-item" id="logout_candidate" type="submit">Đăng xuất
+                    <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+                </button>
+            </form>
+
 
         </div>
     </div>
